--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Sora&display=swap');
+
+* {
+  font-family: 'Sora', sans-serif;
+  box-sizing: border-box;
+  margin:0;
+  padding:0;
+}
+
+
 .App {
   text-align: center;
   display: flex;
@@ -52,3 +63,4 @@ button {
   color: red;
  
 }
+
